# OPC-operating

./: .env.example  .gitignore  Makefile  agent_chain_output.json  briefing_output.json  docker-compose.dev.yml  docker-compose.yml  event_plan_output.json  improvements_test.json  setup.bat  skill_chain_output.json  start.bat  test_results.json  启动前端.bat  启动服务器.bat
backend/: .env.example  Dockerfile  alembic.ini  install.sh  pyproject.toml  requirements.txt  setenv.bat
backend/alembic/: env.py  init.sql  seed.py
backend/alembic/versions/: 001_initial_schema.py  002_phase3_8_tables.py  003_devices_discover.py  004_rls_notifications_dates.py  1c338a688b1f_add_pinned_essence_to_posts.py  7336d36cf40b_add_expires_at_and_freshness_to_.py  bccf30bb328d_add_reputation_and_online_fields.py  f04611769e2a_add_circles_and_circle_members.py
backend/app/: config.py  main.py
backend/app/core/: ai_metrics.py  cache.py  content_filter.py  counters.py  database.py  exceptions.py  logging_config.py  metrics.py  middleware.py  rate_limit.py  redis_client.py  scheduler.py  security.py  settings_manager.py
backend/app/modules/: __init__.py
backend/app/shared/: __init__.py  models.py  schemas.py  utils.py
backend/chroma_data/: chroma.sqlite3
backend/skills/: __init__.py  lenny_loader.py  read_user_profile.py  search_knowledge.py  send_notification.py
backend/skills/daily_briefing/: .memory.md  __init__.py  handler.py
backend/skills/data_query/: __init__.py  handler.py
backend/skills/dribbble-ui-designer/: SKILL.md
backend/skills/event_planner/: .memory.md  __init__.py  handler.py
backend/skills/ppt_master/: __init__.py  handler.py
backend/skills/web_search/: SKILL.md  __init__.py  handler.py
backend/tests/: conftest.py  test_agent.py  test_audit_hook.py  test_auth.py  test_knowledge.py  test_notification.py  test_schedule.py  test_search.py  test_skill.py  test_social.py  test_stop_hook.py  test_tenant.py  test_user.py  test_worker.py  verify_isolation.py
backend/tests/load/: locustfile.py  results_exceptions.csv  results_failures.csv  results_stats.csv  results_stats_history.csv
backend/worker/: __init__.py  beat_schedule.py  celery_app.py
backend/worker/tasks/: __init__.py  daily_briefing.py  data_cleanup.py  db_backup.py  freshness_check.py  health_check.py  knowledge_sync.py  report_gen.py  sync_counters.py
(+171 files in other folders)
