[project]
name = "opc-platform"
version = "0.1.0"
description = "OPC 人员社交、管理、运营、交易平台"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "alembic/*",
    "worker/*",
    # 基础设施层 (无法在单元测试中覆盖)
    "app/core/logging_config.py",
    "app/core/scheduler.py",
    # WebSocket (需要真实连接, ASGI transport 不支持)
    "app/modules/notification/ws.py",
    # LLM 依赖 (需要真实 API 调用)
    "app/modules/agent/guardrails.py",
    # 外部库封装
    "app/modules/knowledge/bm25.py",
]

[tool.coverage.report]
fail_under = 58
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
